pkg/lang/testdata/ub/inputs/invalid/missing-type.ub
inputs: {
  bad: { description: 'no type' }
}
